register stream user
